--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -1,3 +1,5 @@
+{% extends "polls/_layout.html" %}
+{% block main_content %}
 <h1>{{ question.question_text }}</h1>
 
 <ul>
@@ -7,3 +9,4 @@
 </ul>
 
 <a href="{% url 'polls:detail' question.id %}">Vote again?</a>
+{% endblock %}
