--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -2,9 +2,9 @@
 {% block main_content %}
 <h1>{{ question.question_text }}</h1>
 
-<ul>
+<ul class="ui list">
 {% for choice in question.choice_set.all %}
-    <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
+    <li class="item">{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
 {% endfor %}
 </ul>
 
